# lux

./: .gitignore  .gitmodules  AGENTS.ja.md  AGENTS.ko.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GUIDE.ja.md  GUIDE.ko.md  GUIDE.md  README.ko.md  README.md  package-lock.json  package.json
RustGateway~/: Cargo.toml
RustGateway~/src/: addon_auth.rs  addon_routes.rs  addon_store.rs  ai_log.rs  cross_platform.rs  lib.rs  main.rs  mcp.rs  protocol.rs  server.rs  session.rs  skill_adapter.rs  unity_launch.rs
RustGateway~/src/skill_adapter/: adaptation.rs  compatibility.rs  metadata.rs  mod.rs  slimming.rs
RustGateway~/tests/: cli_api_contract_smoke.rs  gateway_cli_smoke.rs  jsonl_persistence_smoke.rs  redact_patterns_smoke.rs  redact_smoke.rs  sessions_api_smoke.rs  static_serving_smoke.rs
RustGateway~/tests/common/: mod.rs
RustGateway~/ui/: index.html
RustGateway~/ui-src/: package-lock.json  package.json  vite.config.ts
RustGateway~/ui-src/src/: App.css  App.tsx  index.css  types.ts
RustGateway~/ui/assets/: index-BCGz-dHp.css  index-CY3zN1K0.js
RustGateway~/ui_backup_for_cleanup/: index.html
RustGateway~/ui_backup_for_cleanup/assets/: index-BfwblU7X.css  index-CUplZ5EU.js
crates/lux-run-core/: Cargo.toml
crates/lux-run-core/src/: lib.rs  run_status.rs  state.rs  task_dag.rs  ticket.rs
gateway/: Cargo.toml  README.md
gateway/assets/: uloop-manifest.json
gateway/src/: AGENTS.md  addon_auth.rs  addon_routes.rs  addon_store.rs  ai_log.rs  auto_update.rs  bridge_types.rs  capture.rs  config.rs  godot_bridge_install.rs  gopeak_manifest.rs  lib.rs  lux_agents_install.rs  lux_ai_session.rs  lux_ambiguity.rs  lux_api.rs  lux_bridge_lease.rs  lux_build.rs  lux_continuation_state.rs  lux_doctor.rs  lux_engines.rs  lux_event_log.rs  lux_events.rs  lux_game_context.rs  lux_game_context_types.rs  lux_hooks.rs  lux_io.rs  lux_lock.rs  lux_loop.rs  lux_manual_qa.rs  lux_manual_qa_io.rs  lux_manual_qa_labels.rs  lux_manual_qa_types.rs  lux_mcp.rs  lux_metrics.rs  lux_next_goal.rs  lux_next_goal_evidence.rs  lux_next_goal_helpers.rs  lux_next_goal_types.rs  lux_roadmap.rs  (+28 more)
gateway/src/lux_hooks/: command.rs  gate.rs  install.rs  policy.rs  rules.rs  run.rs
gateway/src/skill_adapter/: adaptation.rs  compatibility.rs  discovery.rs  metadata.rs  mod.rs  slimming.rs
gateway/src/templates/: build-release.md  camera.md  controls.md  engine.md  gdd.md  mechanics.md  spec.json  technical-architecture.md
gateway/tests/: capture_integration.rs  capture_smoke.rs  cli_api_contract_smoke.rs  event_schema_smoke.rs  gateway_cli_smoke.rs  jsonl_persistence_smoke.rs  lux_ai_session_test.rs  lux_ambiguity_test.rs  lux_autonomous_e2e.rs  lux_build_test.rs  lux_detection_test.rs  lux_e2e.rs  lux_event_log_test.rs  lux_events_test.rs  lux_game_context_test.rs  lux_hooks_blockers_test.rs  lux_hooks_governance_test.rs  lux_hooks_symlink_test.rs  lux_integration_test.rs  lux_kanban_api_test.rs  lux_lifecycle_test.rs  lux_loop_test.rs  lux_manual_qa_test.rs  lux_play_api_test.rs  lux_roadmap_registration_test.rs  lux_roadmap_test.rs  lux_run_state_test.rs  lux_run_test.rs  lux_spec_api_test.rs  lux_spec_test.rs  lux_terminal_test.rs  lux_ticket_test.rs  lux_verification_evidence_temp_test.rs  lux_verification_test.rs  redact_patterns_smoke.rs  redact_smoke.rs  sessions_api_smoke.rs  static_serving_smoke.rs
gateway/tests/common/: mod.rs
gateway/ui-src/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
gateway/ui-src/src/: AGENTS.md  App.css  App.tsx  index.css  main.tsx  types.ts
gateway/ui-src/src/lib/: api.ts
gateway/ui/assets/: index-5Pdn308A.css  index-DbeTISc7.js
gateway/ui_smoke_test_renamed/: index.html
(+568 files in other folders)
