[package]
name = "lux"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
http = "1.2"
tower = { version = "0.5", features = ["util"] }
