[package]
name = "lux"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
lux-ai-core = { path = "../crates/lux-ai-core" }
lux-bridge-core = { path = "../crates/lux-bridge-core" }
lux-core = { path = "../crates/lux-core" }
lux-project = { path = "../crates/lux-project" }
lux-run-core = { path = "../crates/lux-run-core" }
lux-spec-core = { path = "../crates/lux-spec-core" }
lux-verification-core = { path = "../crates/lux-verification-core" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
integration = []

[dev-dependencies]
http = "1.2"
tempfile = "3"
tokio-tungstenite = "0.24"
tower = { version = "0.5", features = ["util"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
