[package]
name = "lux-run-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lux-spec-core = { path = "../lux-spec-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = "1.11"
